--- a/DanfeSharp/DanfeSharp.csproj
+++ b/DanfeSharp/DanfeSharp.csproj
@@ -54,6 +54,9 @@
     <Compile Include="Blocos\BlocoDuplicataFatura.cs" />
     <Compile Include="Blocos\BlocoIdentificacaoEmitente.cs" />
     <Compile Include="Blocos\BlocoCalculoIssqn.cs" />
+    <Compile Include="Blocos\BlocoLocalEntregaRetirada\BlocoLocalEntrega.cs" />
+    <Compile Include="Blocos\BlocoLocalEntregaRetirada\BlocoLocalEntregaRetirada.cs" />
+    <Compile Include="Blocos\BlocoLocalEntregaRetirada\BlocoLocalRetirada.cs" />
     <Compile Include="Blocos\TabelaProdutosServicos.cs" />
     <Compile Include="Blocos\BlocoTransportador.cs" />
     <Compile Include="Constantes.cs" />
@@ -95,6 +98,7 @@
     <Compile Include="Modelo\DanfeViewModelCreator.cs" />
     <Compile Include="Modelo\EmpresaViewModel.cs" />
     <Compile Include="Modelo\DuplicataViewModel.cs" />
+    <Compile Include="Modelo\LocalEntregaRetiradaViewModel.cs" />
     <Compile Include="Modelo\ProdutoViewModel.cs" />
     <Compile Include="Modelo\TransportadoraViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
